# anonymous-message

./: .env  .env.sample  .gitignore  Cargo.toml  README.md  error.json  todo
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.sqlx/: query-182348b726da97f8079086953d951bab62610ef5ec28380938cc4e2225d1b864.json  query-5c437127146aacb8359ef3ad969bf3fe30543bd78c9a5667aa1c3ab36aa8ef4f.json  query-d5ac78ce5c5648b3f7032786ab8ff258e578b75b6fc77fc9331371102ddc0a18.json  query-dbf43b5387896c715ad2492dc8f12c1bbaaaa7315862da421289cd4baefc8de9.json
migrations/: 20231020052010_setup.down.sql  20231020052010_setup.up.sql  20240120050339_create_users.up.sql  20240403084247_name-password-profile-link.down.sql  20240403084247_name-password-profile-link.up.sql  20241020050339_create_users.up.sql
src/: main.rs
src/config/: environment.rs
src/core/: error_transformer.rs  mod.rs
src/core/extractors/: auth.rs  mod.rs  request_body.rs  request_param.rs
src/core/models/: auth.rs  error.rs
src/core/traits/: mod.rs  tve.rs
src/core/utils/: auth_util.rs  mod.rs
src/modules/auth/: auth_route.rs  mod.rs
src/modules/auth/controllers/: auth_api.rs  mod.rs
src/modules/auth/models/: default_model.rs  mod.rs  user_model.rs
src/modules/auth/service/: auth_service.rs
src/modules/auth/validation_errors/: login_error.rs  mod.rs  signup_error.rs
