[package]
name = "reminder-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum="0.7.4"
tokio={version = "1.29.1", features = ["full"]}
serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.103"
sqlx = { version = "0.7.1", features = [ "runtime-tokio-rustls", "postgres", "json", "uuid", "chrono" ] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
tower-http = { version= "0.5.1", features=["full"] }
validator = { version = "0.16.1", features = ["derive"] }
thiserror = "1.0.43"
dotenv = "0.15.0"
tower = { version = "0.4.13", features = ["full"] }
axum-extra =  "0.9.2"
regex = "1.9.1"
anyhow = "1.0.75"
argon2 = "0.5.3"
rand = "0.8.5"
chrono = {version = "0.4.37", features = ["serde"]}
pg_mapper = "0.2.1"
tokio-postgres = "0.7.10"
jsonwebtoken = "9.3.0"
